--- a/E-commerce/register.css
+++ b/E-commerce/register.css
@@ -2,11 +2,13 @@ body {
     background-image: url('register.jpg'); 
     background-size: cover; 
     background-repeat: no-repeat;
-    min-height: 100%;
+    min-height: 100vh;
+    height: 100%;
+    min-width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 * {
